[project]
name = "hiremesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.21",
    "celery[redis]>=5.6.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-genai>=1.56.0",
    "langfuse>=3.11.2",
    "openai>=2.14.0",
    "openinference-instrumentation-agno>=0.1.25",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.5.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
